# STEMMA_soil_moisture_sensor

./: .gitignore  Cargo.toml  README.md
examples/esp32/: Cargo.toml
src/: error.rs  lib.rs
