[package]
name = "stemma_soil_moisture_sensor"
description = "A pure generic I2C crate for the Adafruit STEMMA soil moisture sensor "
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/FloppyDisck/STEMMA_soil_moisture_sensor"
readme = "README.md"
keywords = ["embedded", "soil", "moisture", "stemma", "adafruit"]
categories = ["embedded"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal            = "0.2.7"
crc = "3.0.0"
thiserror-no-std = "2.0.2"

[dev-dependencies]
embedded-hal-mock = "0.9.0"
rstest = "0.16.0"